@@ -555,6 +555,10 @@
 
       \item The \code{formula} method of \code{aggregate} now matches the
       generic in its first argument, fixing \PR{18299} by Thomas Soeiro.
+
+      \item The \code{data.frame} method of \code{rbind()} now warns
+      when binding not-wholly-reclying vectors, in analogy to the default
+      method (for matrix).
     }
   }
 }
